examples/invalid/syntaxErr/while/dooErr.wacc
# do typo
# Output:
# #syntax error#

#Program:#

begin
  while false doo
    skip
  done
end
